; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_hibernate_restore.c_hibernate_restore_phys_page.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_hibernate_restore.c_hibernate_restore_phys_page.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEST_COPY_AREA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @hibernate_restore_phys_page(i64 %0, i64 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64*, align 8
  %11 = alloca i64*, align 8
  store i64 %0, i64* %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i32, i32* %9, align 4
  %13 = load i64, i64* %6, align 8
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %4
  %16 = load i64, i64* %7, align 8
  store i64 %16, i64* %5, align 8
  br label %30

17:                                               ; preds = %4
  %18 = load i32, i32* @DEST_COPY_AREA, align 4
  %19 = load i64, i64* %7, align 8
  %20 = call i64 @pal_hib_map(i32 %18, i64 %19)
  %21 = inttoptr i64 %20 to i64*
  store i64* %21, i64** %10, align 8
  %22 = load i64, i64* %6, align 8
  %23 = inttoptr i64 %22 to i64*
  store i64* %23, i64** %11, align 8
  %24 = load i64*, i64** %10, align 8
  %25 = load i64*, i64** %11, align 8
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @__nosan_memcpy(i64* %24, i64* %25, i32 %26)
  %28 = load i64*, i64** %10, align 8
  %29 = ptrtoint i64* %28 to i64
  store i64 %29, i64* %5, align 8
  br label %30

30:                                               ; preds = %17, %15
  %31 = load i64, i64* %5, align 8
  ret i64 %31
}

declare dso_local i64 @pal_hib_map(i32, i64) #1

declare dso_local i32 @__nosan_memcpy(i64*, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
